oneAPI: optional TBB

--- a/cpp20/CMakeLists.txt
+++ b/cpp20/CMakeLists.txt
@@ -62,13 +62,18 @@ have_ranges_find
 
 # C++17 execution policy with C++20 enhancements
 check_include_file_cxx(execution have_execution_policy)
+block()
 if(have_execution_policy)
+  if(TBB_FOUND)
+    set(CMAKE_REQUIRED_LIBRARIES TBB::tbb)
+  endif()
   file(READ execution_policy.cpp _src)
   check_source_compiles(CXX "${_src}" execution_policy_parallel)
   if(NOT execution_policy_parallel)
     set_property(CACHE have_execution_policy PROPERTY VALUE false)
   endif()
 endif()
+endblock()
 
 foreach(t IN LISTS cpp20features)
   if(have_${t})
@@ -80,6 +85,7 @@ endforeach()
 
 if(have_execution_policy)
   target_compile_options(execution_policy PRIVATE ${stdpar_opt})
+  target_link_libraries(execution_policy PRIVATE $<$<BOOL:${TBB_FOUND}>:TBB::tbb>)
 endif()
 
 if(have_coroutine)
