--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,6 +8,12 @@ on:
       - "**.cmake"
       - "**/CMakeLists.txt"
       - ".github/workflows/cmake.yml"
+  workflow_dispatch:
+
+# avoid wasted runs
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   CTEST_NO_TESTS_ACTION: error
@@ -19,7 +25,7 @@ env:
 jobs:
 
   gcc-new:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 5
 
     strategy:
@@ -116,14 +122,15 @@ jobs:
 
     steps:
     - uses: msys2/setup-msys2@v2
+      id: msys2
       with:
         update: true
         install: >-
-          mingw-w64-x86_64-gcc
+          mingw-w64-ucrt-x86_64-gcc
 # need GCC install to get latest G++
 
     - name: Put MSYS2_MinGW64 on PATH
-      run: echo "${{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      run: echo "${{ steps.msys2.outputs.msys2-location }}/ucrt64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - uses: actions/checkout@v4
 
@@ -136,3 +143,10 @@ jobs:
       with:
         name: ${{ runner.os }}-GCC_features.json
         path: build/features.json
+
+    - name: upload CMakeConfigureLog.yaml
+      if: failure() && hashFiles('build/CMakeFiles/CMakeConfigureLog.yaml') != ''
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ runner.os }}-CMakeConfigureLog.yaml
+        path: build/CMakeFiles/CMakeConfigureLog.yaml
