--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,6 @@ concurrency:
 env:
   CTEST_NO_TESTS_ACTION: error
   CTEST_PARALLEL_LEVEL: 0
-  CMAKE_BUILD_PARALLEL_LEVEL: 4
   HOMEBREW_NO_AUTO_UPDATE: 1
 
 
@@ -36,16 +35,20 @@ jobs:
       CXX: ${{ matrix.cxx }}
 
     steps:
-    - uses: actions/checkout@v4
+    - &checkout
+      uses: actions/checkout@v5
 
-    - run: cmake --workflow debug
+    - &debug
+      run: cmake --workflow debug
 
-    - run: cmake --workflow release
+    - &release
+      run: cmake --workflow release
 
-    - uses: actions/upload-artifact@v4
+    - &features
+      uses: actions/upload-artifact@v4
       if: success()
       with:
-        name: ${{ matrix.cxx }}_features.json
+        name: ${{ runner.os }}-${{ matrix.cxx }}_features.json
         path: build/features.json
 
 
@@ -61,17 +64,13 @@ jobs:
       CXX: ${{ matrix.cxx }}
 
     steps:
-    - uses: actions/checkout@v4
+    - *checkout
 
-    - run: cmake --workflow debug
+    - *debug
 
-    - run: cmake --workflow release
+    - *release
 
-    - uses: actions/upload-artifact@v4
-      if: success()
-      with:
-        name: ${{ matrix.cxx }}_features.json
-        path: build/features.json
+    - *features
 
 
   mac:
@@ -79,46 +78,52 @@ jobs:
     timeout-minutes: 5
 
     env:
-      HOMEBREW_NO_AUTO_CLEANUP: 1
       CXX: ${{ matrix.cxx }}
 
     strategy:
       matrix:
-        cxx: [clang++, g++-14]
+        cxx: [clang++, g++-15]
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Latest Xcode needed for GCC
+      if: startsWith(matrix.cxx, 'g++')
+      run: sudo xcode-select --switch /Library/Developer/CommandLineTools
+# This comes into play when GA is pinned to an old Xcode b/c Homebrew builds against latest
+# Every say year or two this becomes an issue.
+# https://github.com/Homebrew/homebrew-core/issues/228131
 
-    - run: cmake --workflow debug
+    - *checkout
 
-    - run: cmake --workflow release
+    - *debug
 
-    - uses: actions/upload-artifact@v4
-      if: success()
-      with:
-        name: ${{ runner.os }}-${{ matrix.cxx }}_features.json
-        path: build/features.json
+    - *release
 
+    - *features
 
 
   windows-msvc:
     runs-on: windows-latest
+    timeout-minutes: 10
+
+    strategy:
+      matrix:
+        cxx: [msvc]
 
     steps:
-    - uses: actions/checkout@v4
+    - *checkout
 
     - run: cmake --workflow msvc
 
-    - uses: actions/upload-artifact@v4
-      if: success()
-      with:
-        name: ${{ runner.os }}-MSVC_features.json
-        path: build/features.json
+    - *features
 
 
   windows-gcc:
     runs-on: windows-latest
     timeout-minutes: 10
+
+    strategy:
+      matrix:
+        cxx: [g++]
 
     steps:
     - uses: msys2/setup-msys2@v2
@@ -132,20 +137,16 @@ jobs:
     - name: Put MSYS2_MinGW64 on PATH
       run: echo "${{ steps.msys2.outputs.msys2-location }}/ucrt64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
-    - uses: actions/checkout@v4
+    - *checkout
 
-    - run: cmake --workflow debug
+    - *debug
 
-    - run: cmake --workflow release
+    - *release
 
-    - uses: actions/upload-artifact@v4
-      if: success()
-      with:
-        name: ${{ runner.os }}-GCC_features.json
-        path: build/features.json
+    - *features
 
     - name: upload CMakeConfigureLog.yaml
-      if: failure() && hashFiles('build/CMakeFiles/CMakeConfigureLog.yaml') != ''
+      if: failure()
       uses: actions/upload-artifact@v4
       with:
         name: ${{ runner.os }}-CMakeConfigureLog.yaml
